<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.simulatest</groupId>
	<artifactId>simulatest</artifactId>
	<version>0.0.2</version>
	<packaging>pom</packaging>
	<name>Simulatest - Integration Test Harness Framework</name>

	<properties>
		<spring.version>3.0.5.RELEASE</spring.version>
	</properties>

	<modules>
		<module>simulatest-connection</module>
		<module>simulatest-insistencelayer</module>
		<module>simulatest-insistencelayer-server</module>
		<module>simulatest-environment</module>
		<module>simulatest-spring</module>
		<!-- <module>simulatest-hibernate</module> -->
		<module>simulatest-gui</module>
		<!-- <module>simulatest-jee5</module> -->
	</modules>

	<developers>
		<developer>
			<id>gabrielsuch</id>
			<name>Gabriel Such</name>
			<email>gabrielsuch@gmail.com</email>
		</developer>
		<developer>
			<id>lohandus</id>
			<name>Lohandus Terceiro</name>
			<email>lohandus@gmail.com</email>
		</developer>
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>1.2.130</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.5</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>4.11.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>r09</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.simulatest</groupId>
				<artifactId>simulatest-connection</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.simulatest</groupId>
				<artifactId>simulatest-insistencelayer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.simulatest</groupId>
				<artifactId>simulatest-insistencelayer-server</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.simulatest</groupId>
				<artifactId>simulatest-environment</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>uispec4j</groupId>
				<artifactId>uispec4j</artifactId>
				<version>1.5</version>
			</dependency>
			<dependency>
				<groupId>org.picocontainer</groupId>
				<artifactId>picocontainer</artifactId>
				<version>2.14</version>
			</dependency>
			<dependency>
				<groupId>com.miglayout</groupId>
				<artifactId>miglayout</artifactId>
				<version>3.7.4</version>
			</dependency>
			<dependency>
				<groupId>org.easytesting</groupId>
				<artifactId>fest-swing</artifactId>
				<version>1.2.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-digester3</artifactId>
				<version>3.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>